--- a/heavycenter/src/main/res/layout/item_main_order_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_begin.xml
@@ -5,6 +5,8 @@
         <variable
                 name="item_main_order_begin"
                 type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
+
+        <import type="com.android.lib.util.data.DateFormatUtil"/>
     </data>
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -47,15 +49,16 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/tv_productName"
             android:id="@+id/tv_planmun"
-            android:background="@drawable/bg_hv_sel_yel_blue_stroke"
+            android:background="@{item_main_order_begin.sendType?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
             android:singleLine="true"
-            android:textColor="@color/color_yell_blue"
+            android:textColor="@{item_main_order_begin.sendType?@color/color_hv_yelll:@color/color_hv_blue}"
             android:textSize="12sp"
-            android:text='@{"计划: "+item_main_order_begin.planNumber}'
+            android:text="@{item_main_order_begin.planNumberCN}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:background="@{item_main_order_begin.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:padding="1dp"
             android:includeFontPadding="false"
             android:layout_marginTop="15dp"
@@ -67,7 +70,7 @@
             android:singleLine="true"
             android:textColor="@color/black"
             android:textSize="14sp"
-            android:text="来自"
+            android:text="@{item_main_order_begin.type}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -81,12 +84,13 @@
             android:layout_marginLeft="8dp"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            android:text="@{item_main_order_begin.shdwName}"
+            android:text="@{item_main_order_begin.accessComName}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
 
         <TextView
+
             android:includeFontPadding="false"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/tv_duimian"
