--- a/heavycenter/src/main/res/layout/item_main_order_detail_done.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_detail_done.xml
@@ -1,145 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+    <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <variable
-            name="item_main_order_detail_done"
-            type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
-    </data>
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="18dp"
-        android:paddingBottom="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="10dp"
-        android:id="@+id/ll_doneorder"
-        android:transitionName="doingorder">
+        <data>
+            <variable
+                name="item_main_order_detail_done"
+                type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
+            <import type="com.android.lib.util.StringUtil"/>
+        </data>
+        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_hv_sel_dark_light"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:paddingLeft="10dp"
+            android:paddingBottom="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+            android:id="@+id/ll_doneorder"
+            android:transitionName="doingorder">
 
-        <TextView
-            android:includeFontPadding="false"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:id="@+id/tv_goodname"
-            android:singleLine="true"
-            android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-            android:text="混凝土"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:includeFontPadding="false"
-            app:layout_constraintLeft_toRightOf="@+id/tv_goodname"
-            android:id="@+id/tv_spes"
-            android:singleLine="true"
-            android:layout_marginLeft="15dp"
-            android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            android:text="D150"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-        <TextView
-            android:layout_marginTop="7dp"
-            android:includeFontPadding="false"
-            app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_goodname"
-            android:id="@+id/tv_type"
-            android:background="@drawable/bg_hv_sharp2_blue_solid"
-            android:singleLine="true"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:text="来自"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_marginTop="3dp"
-            app:layout_constraintLeft_toRightOf="@+id/tv_type"
-            app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
-            android:id="@+id/tv_companyname"
-            android:singleLine="true"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            android:text="上海绿地"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-
-        <LinearLayout
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/bg_hv_sharp2_yell_stroke"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
             <TextView
-                android:paddingLeft="3dp"
-                android:paddingRight="3dp"
                 android:includeFontPadding="false"
-                android:id="@+id/tv_carno"
+                app:layout_constraintTop_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:id="@+id/tv_goodname"
                 android:singleLine="true"
-                android:textColor="@color/color_base_txt_heavycenter_y"
-                android:textSize="12sp"
-                android:text=" 沪A2345 "
+                android:text="@{item_main_order_detail_done.productName}"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_recylce_item_title_txtsize"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:includeFontPadding="false"
+                app:layout_constraintLeft_toRightOf="@+id/tv_goodname"
+                android:id="@+id/tv_spes"
+                android:text="@{item_main_order_detail_done.specification}"
+                android:singleLine="true"
+                android:layout_marginLeft="15dp"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <TextView
+                android:layout_marginTop="7dp"
+                android:includeFontPadding="false"
+                app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_goodname"
+                android:id="@+id/tv_type"
+                android:background="@{item_main_order_detail_done.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
+                android:singleLine="true"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginTop="3dp"
+                app:layout_constraintLeft_toRightOf="@+id/tv_type"
+                app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
+                android:id="@+id/tv_companyname"
+                android:singleLine="true"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+
+            <TextView
+                android:background="@{item_main_order_detail_done.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 android:paddingLeft="3dp"
                 android:paddingRight="3dp"
                 android:includeFontPadding="false"
+                android:id="@+id/tv_totalcarnum"
+                android:singleLine="true"
+                android:text="@{item_main_order_detail_done.totalRecordCN}"
+                android:textColor="@color/color_base_txt_heavycenter_y"
+                android:textSize="12sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+
+
+            <TextView
+                android:layout_marginTop="10dp"
+               app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_type"
                 android:id="@+id/tv_plan"
+                android:layout_gravity="bottom|left"
+                android:gravity="center"
                 android:singleLine="true"
-                android:textColor="@color/color_base_txt_heavycenter_y"
-                android:textSize="12sp"
-                android:text=" 沪A2345 "
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:text="@{item_main_order_detail_done.planNumberCN}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-        </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/sflab"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_companyname"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_type"
-            android:layout_gravity="center_vertical"
-            android:gravity="bottom|left"
-            android:singleLine="true"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:text="实发："
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
-        <TextView
-            app:layout_constraintLeft_toRightOf="@+id/sflab"
-            app:layout_constraintBottom_toBottomOf="@+id/sflab"
-            android:id="@+id/tv_sf"
-            android:layout_gravity="bottom|left"
-            android:gravity="center"
-            android:singleLine="true"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:text="2000t"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-        <LinearLayout
-            app:layout_constraintBottom_toBottomOf="@+id/sflab"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_gravity="bottom"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
             <TextView
+                android:layout_marginTop="7dp"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_plan"
+                app:layout_constraintTop_toBottomOf="@+id/tv_plan"
+                android:id="@+id/tv_sf"
+                android:layout_gravity="bottom|left"
+                android:gravity="center"
+                android:singleLine="true"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:text="@{item_main_order_detail_done.actualFhCN}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <TextView
+                android:id="@+id/shlab"
+                android:layout_marginTop="7dp"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_yk"
+                app:layout_constraintTop_toBottomOf="@+id/tv_yk"
                 android:layout_gravity="bottom"
                 android:gravity="bottom|right"
                 android:singleLine="true"
@@ -150,46 +134,37 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+               app:layout_constraintLeft_toRightOf="@+id/shlab"
+                app:layout_constraintBottom_toBottomOf="@+id/shlab"
                 android:includeFontPadding="false"
                 android:id="@+id/tv_ss"
                 android:layout_gravity="bottom|left"
                 android:gravity="center"
                 android:singleLine="true"
-                android:textColor="@color/white"
+                android:textColor="@color/color_hv_yelll"
                 android:textSize="21sp"
-                android:text="2000t"
+                android:text='@{item_main_order_detail_done.actualSh+"t"}'
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-        </LinearLayout>
 
 
-        <TextView
-            app:layout_constraintRight_toLeftOf="@+id/tv_yk"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_yk"
-            android:layout_gravity="bottom"
-            android:gravity="bottom|right"
-            android:singleLine="true"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:text="盈亏："
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
-        <TextView
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/sflab"
-            android:id="@+id/tv_yk"
-            android:layout_gravity="bottom|right"
-            android:gravity="center"
-            android:singleLine="true"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:text="2000t"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginLeft="30dp"
+                app:layout_constraintLeft_toRightOf="@+id/tv_plan"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_plan"
+                android:id="@+id/tv_yk"
+                android:layout_gravity="bottom|right"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="@{item_main_order_detail_done.YKCN}"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
 
 
 
-    </android.support.constraint.ConstraintLayout>
-</layout>
+        </android.support.constraint.ConstraintLayout>
+    </layout>
