--- a/heavycenter/src/main/res/layout/item_main_order_doing.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_doing.xml
@@ -39,6 +39,7 @@
 
 
             <TextView
+                android:text='@{item_main_order_doing.totalRecord+""}'
                 android:id="@+id/tv_carnum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -108,7 +109,7 @@
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
             android:singleLine="true"
-            android:text="混凝土"
+            android:text="@{item_main_order_doing.productName}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_title_txtsize"
             app:layout_constraintLeft_toRightOf="@+id/guideline2"
@@ -121,7 +122,7 @@
             android:layout_marginLeft="15dp"
             android:includeFontPadding="false"
             android:singleLine="true"
-            android:text="C30"
+            android:text="@{item_main_order_doing.specification}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_title_txtsize"
             app:layout_constraintBottom_toBottomOf="@+id/tv_goodname"
@@ -135,7 +136,7 @@
             android:layout_alignParentRight="true"
             android:background="@drawable/bg_hv_sel_yel_blue_stroke"
             android:singleLine="true"
-            android:text="沪A2345"
+            android:text="@{item_main_order_doing.carLicenseNo}"
             android:textColor="@color/color_yell_blue"
             android:textSize="12sp"
             app:layout_constraintRight_toRightOf="parent"
@@ -143,15 +144,15 @@
 
 
         <TextView
+            android:background="@{item_main_order_doing.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:id="@+id/tv_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@drawable/bg_hv_sharp2_blue_solid"
             android:includeFontPadding="false"
             android:padding="1dp"
             android:singleLine="true"
-            android:text="发往"
+            android:text="@{item_main_order_doing.type}"
             android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="@+id/tv_goodname"
@@ -165,7 +166,7 @@
             android:layout_marginTop="10dp"
             android:includeFontPadding="false"
             android:singleLine="true"
-            android:text="上海绿地"
+            android:text="@{item_main_order_doing.accessComName}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
             app:layout_constraintLeft_toRightOf="@+id/tv_type"
